[metadata]
  name = yuuki
  version = 1.0.0-alpha
  description = OpenC2 MQTT Reference Implementation


[options]
  packages = yuuki
  python_requires = >=3.7
  install_requires =
    quart
    flask
    paho-mqtt
    requests

[options.package_data]
  * = *.json, *.conf

[options.entry_points]
  console_scripts =
    yuuki.consumer = yuuki.consumer:run
